--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
     "next": "16.0.5",
+    "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
+    "react-easy-crop": "^5.5.6",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
