--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "better-sqlite3": "^12.5.0",
     "chart.js": "^4.5.1",
     "cheerio": "^1.1.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "emoji-picker-react": "^4.16.1",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
     "lunr": "^2.3.9",
     "mongodb": "^7.0.0",
