feat: Implement ngrok remote browser for attendance login
- Added @ngrok/ngrok package and tunnel management
- Created /api/attendance/auth/remote-init endpoint
- Created /api/attendance/auth/capture endpoint
- Added remote browser UI with Start Remote Browser button
- Removed legacy screenshot-based login functionality
- Updated next.config.mjs to externalize @ngrok/ngrok
- Chrome opens locally for real-time login experience

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ngrok/ngrok": "^1.6.0",
+    "@ngrok/ngrok-win32-x64-msvc": "^1.6.0",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
     "chart.js": "^4.5.1",
