fix: Make ngrok optional dependency for cross-platform builds
- Moved @ngrok/ngrok to optionalDependencies in package.json
- Changed import to conditional require() in ngrok-tunnel.ts
- Falls back to localhost URL when ngrok unavailable
- Fixes Linux build errors on Render/Vercel deployment
- Build tested successfully on Windows

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "postinstall": "puppeteer browsers install chrome",
     "lint": "eslint"
   },
+  "optionalDependencies": {
+    "@ngrok/ngrok": "^1.6.0"
+  },
   "dependencies": {
-    "@ngrok/ngrok": "^1.6.0",
     "@ngrok/ngrok-win32-x64-msvc": "^1.6.0",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
