fix: Railway Docker build - use npm install instead of ci
- Changed npm ci to npm install for better optional deps handling
- Skip Puppeteer download in Railway (Chrome pre-installed in Docker)
- Fixes platform mismatch errors during build

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postinstall": "puppeteer browsers install chrome",
+    "postinstall": "test -n \"$RAILWAY_ENVIRONMENT\" || puppeteer browsers install chrome",
     "lint": "eslint"
   },
   "optionalDependencies": {
