--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.1",
     "react-easy-crop": "^5.5.6",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "wait-port": "^1.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
