--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "emoji-picker-react": "^4.16.1",
+    "is-plain-object": "^5.0.0",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
     "lunr": "^2.3.9",
